# moocon-vaults

./: .gitignore  Anchor.toml  LICENSE  README.md  biome.json  package.json  tsconfig.json
api/: .env.example  .gitignore  drawing-cron.txt  package.json  points-cron.txt
app/: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  vite.config.ts
docs/: package.json  react-router.config.ts
landing/: package.json
programs/moocon-vaults/: Cargo.toml
programs/moocon-vaults/src/: constants.rs  error.rs  events.rs  lib.rs
programs/moocon-vaults/src/cpi/: cpi_deposit.rs  cpi_withdraw.rs  exchange_rate.rs  mod.rs
programs/moocon-vaults/src/instructions/: mod.rs
programs/moocon-vaults/src/instructions/admin/: collect_fee.rs  initialize.rs  initialize_vault.rs  mod.rs  set_vrf_authority.rs  set_withdraw_fee.rs  sync_rate.rs
programs/moocon-vaults/src/instructions/authority/: commit.rs  mod.rs  reveal.rs  set_winner.rs
programs/moocon-vaults/src/instructions/user/: claim.rs  deposit.rs  withdraw.rs
programs/moocon-vaults/src/state/: mod.rs  reward.rs  state.rs  vault.rs
scripts/: consts.ts  decode-account.ts  fetch-accounts.ts  list-vaults.ts  read-exchange-rate.ts
tests/: admin.test.ts  commit.test.ts  deposit.test.ts  fee.test.ts  metaplex.test.ts  moocon-vaults.ts  multi-user.test.ts  randomness.test.ts  reveal.test.ts  reward-lifecycle.test.ts  set-fee.test.ts  set-winner.test.ts  test-utils.ts
ts-sdk/: consts.ts  events.ts  fetcher.ts  index.ts  merkle-tree.ts  package.json  referrals.ts  types.ts  utils.ts  vault.ts
(+126 files in other folders)
